--- a/UserManagement.Services/UserManagement.Services.csproj
+++ b/UserManagement.Services/UserManagement.Services.csproj
@@ -4,5 +4,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\UserManagement.Data\UserManagement.Data.csproj" />
+    <ProjectReference Include="..\UserManagement.Domain\UserManagement.Domain.csproj" />
   </ItemGroup>
 </Project>
